Banned port pref doesn't seem to work
Categories
(Core :: Networking, defect, P2)
Tracking
()
People
(Reporter: Gijs, Assigned: kershaw)
References
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
STR:
- open firefox/nightly on a clean profile
- open about:config
- create a new string pref
network.security.ports.banned, give it value45699(or some other random value, let's refer to it asmyport) - open a new tab, type in
localhost:myport(solocalhost:45699in our example) in the location bar and hit enter
ER:
An error with title "This address is restricted"
AR:
An error saying "Unable to connect" (assuming there's nothing running on the port you picked)
Ports that are blocked by default are blocked correctly. I don't know why the pref doesn't work.
| Assignee | ||
Comment 1•6 years ago
|
||
(In reply to :Gijs (he/him) from comment #0)
STR:
- open firefox/nightly on a clean profile
- open about:config
- create a new string pref
network.security.banned.ports, give it value45699(or some other random value, let's refer to it asmyport)
I think the correct pref name is network.security.ports.banned. Could you check again?
| Reporter | ||
Comment 2•6 years ago
|
||
(In reply to Kershaw Chang [:kershaw] from comment #1)
(In reply to :Gijs (he/him) from comment #0)
STR:
- open firefox/nightly on a clean profile
- open about:config
- create a new string pref
network.security.banned.ports, give it value45699(or some other random value, let's refer to it asmyport)I think the correct pref name is network.security.ports.banned. Could you check again?
Sorry, my steps are written wrong (will edit in a bit) but I did test this with the right pref name. I just doublechecked again and it's still broken when I use "network.security.ports.banned" . Are you not able to reproduce?
| Assignee | ||
Comment 3•6 years ago
|
||
(In reply to :Gijs (he/him) from comment #2)
(In reply to Kershaw Chang [:kershaw] from comment #1)
(In reply to :Gijs (he/him) from comment #0)
STR:
- open firefox/nightly on a clean profile
- open about:config
- create a new string pref
network.security.banned.ports, give it value45699(or some other random value, let's refer to it asmyport)I think the correct pref name is network.security.ports.banned. Could you check again?
Sorry, my steps are written wrong (will edit in a bit) but I did test this with the right pref name. I just doublechecked again and it's still broken when I use "network.security.ports.banned" . Are you not able to reproduce?
I can reproduce this with the port number '45699', but I can't with the port '1234'.
I'll take a look. Thanks.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 4•6 years ago
|
||
Updated•6 years ago
|
Comment 6•6 years ago
|
||
| bugherder | ||
Comment 7•6 years ago
|
||
Comment on attachment 9070520 [details]
Bug 1556019 - Use int32 to store port number
Beta/Release Uplift Approval Request
- User impact if declined: Broken test
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Fixes an overflow which breaks the test added by bug 1555671
- String changes made/needed:
Updated•6 years ago
|
Comment 8•6 years ago
|
||
Comment on attachment 9070520 [details]
Bug 1556019 - Use int32 to store port number
approved for 68.0b10
Comment 9•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 10•6 years ago
|
||
Hi, I managed to reproduce this issue in older versions of Firefox but this issue is Verified as fixed in Beta 68.0b10 as well as our latest Nightly 69.0a1 (2019-06-13).
Updated•4 years ago
|
Description
•