Bug 1556019 - Use int32 to store port number. r=valentin, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D34123